8237577: minimal jextract tool on jextract API
Reviewed-by: mcimadamore